SERVER-17219 At rollback of the last level, clear the _mustRollback flag